fix(sensor.doctrine_migrations): replaced service subscriber
as it don't work with named services

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -17,3 +17,6 @@ services:
     whatwedo\MonitorBundle\Normalizer\:
         resource: '../../Normalizer/'
         tags: ['serializer.normalizer']
+
+    whatwedo\MonitorBundle\Monitoring\Sensor\Database\DoctrineMigrations:
+        arguments: ['@?doctrine.migrations.dependency_factory']
