--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
             matrix:
                 operating-system: [ ubuntu-latest ]
                 php: [ '8.1', '8.2' ]
-                symfony: ['5.3.*', '5.4.*', '6.0.*', '6.1.*']
+                symfony: ['5.3.*', '5.4.*', '6.0.*', '6.1.*', '6.2.*']
 
         steps:
             - uses: actions/checkout@master
