--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
-        "symfony/twig-bundle": "^5.3|^6.0"
+        "symfony/twig-bundle": "^5.3|^6.0",
+        "symfony/messenger": "^5.3|^6.0"
     },
     "autoload": {
         "psr-4": {
