--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
         "symfony/twig-bundle": "^5.3|^6.0",
-        "symfony/messenger": "^5.3|^6.0"
+        "symfony/messenger": "^5.3|^6.0",
+        "symfony/mercure-bundle": "^0.3"
     },
     "autoload": {
         "psr-4": {
