test(monitoring): add getName test

--- a/tests/Monitoring/Sensor/Service/config/mercure.yml
+++ b/tests/Monitoring/Sensor/Service/config/mercure.yml
@@ -3,4 +3,4 @@ mercure:
         default:
             url: http://127.0.0.1/.well-known/mercure
             jwt:
-              secret: 'secret'
+              secret: 'ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890'
