--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^5.3|^6.0",
-        "symfony/serializer": "^5.3|^6.0"
+        "symfony/framework-bundle": "^6.3",
+        "symfony/serializer": "^6.3"
     },
     "require-dev": {
         "nyholm/symfony-bundle-test": "^2.0",
@@ -22,14 +22,14 @@
         "whatwedo/php-coding-standard": "^1.0",
         "phpstan/phpstan": "^1.7",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^5.3|^6.0",
-        "symfony/css-selector": "^5.3|^6.0",
-        "symfony/phpunit-bridge": "^6.2",
+        "symfony/browser-kit": "^6.3",
+        "symfony/css-selector": "^6.3",
+        "symfony/phpunit-bridge": "^6.3",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
-        "symfony/twig-bundle": "^5.3|^6.0",
-        "symfony/messenger": "^5.3|^6.0",
+        "symfony/twig-bundle": "^6.3",
+        "symfony/messenger": "^6.3",
         "symfony/mercure-bundle": "^0.3"
     },
     "autoload": {
