feat(exit-code): configure exit code for critical on api and command
#1

--- a/tests/config/dummy_warning_custom_exit_code.yml
+++ b/tests/config/dummy_warning_custom_exit_code.yml
@@ -6,4 +6,7 @@ services:
     tags: [ 'whatwedo_monitor.attribute' ]
 
 whatwedo_monitor:
-  warning_exit_code: 2
+  endpoint:
+    command:
+      exit_code:
+        warning: 2
