fix(api): set custom status code correctly. added corresponding test
#1

--- a/tests/config/dummy_critical_custom_http_status_code.yml
+++ b/tests/config/dummy_critical_custom_http_status_code.yml
@@ -7,6 +7,6 @@ services:
 
 whatwedo_monitor:
   endpoint:
-    command:
-      exit_code:
-        critical: -1
+    api:
+      http_status_code:
+        critical: 500
