--- a/composer.json
+++ b/composer.json
@@ -13,23 +13,23 @@
     ],
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": "^6.3",
-        "symfony/serializer": "^6.3"
+        "symfony/framework-bundle": "^6.3|^7.0",
+        "symfony/serializer": "^6.3|^7.0"
     },
     "require-dev": {
-        "nyholm/symfony-bundle-test": "^2.0",
+        "nyholm/symfony-bundle-test": "^3.0",
         "zenstruck/console-test": "^v1.1.0",
         "whatwedo/php-coding-standard": "^1.0",
         "phpstan/phpstan": "^1.7",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^6.3",
-        "symfony/css-selector": "^6.3",
-        "symfony/phpunit-bridge": "^6.3",
+        "symfony/browser-kit": "^6.3|^7.0",
+        "symfony/css-selector": "^6.3|^7.0",
+        "symfony/phpunit-bridge": "^6.3|^7.0",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
-        "symfony/twig-bundle": "^6.3",
-        "symfony/messenger": "^6.3",
+        "symfony/twig-bundle": "^6.3|^7.0",
+        "symfony/messenger": "^6.3|^7.0",
         "symfony/mercure-bundle": "^0.3"
     },
     "autoload": {
