--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,6 +40,7 @@ jobs:
                 configuration: phpunit.xml.dist
                 php_extensions: xdebug
                 args: tests --coverage-clover ./coverage.xml
+                version: 9
 
             - name: Upload to Codecov
               uses: codecov/codecov-action@v2
