--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
             matrix:
                 operating-system: [ ubuntu-latest ]
                 php: [ '8.1', '8.2' ]
-                symfony: [ '6.3.*', '6.4.*', '7.0.*' ]
+                symfony: [ '6.4.*', '7.0.*' ]
                 exclude:
                   - php: '8.1'
                     symfony: '7.0.*'
