--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,11 +11,13 @@ jobs:
         strategy:
             matrix:
                 operating-system: [ ubuntu-latest ]
-                php: [ '8.1', '8.2' ]
-                symfony: [ '6.4.*', '7.0.*' ]
+                php: [ '8.2', '8.3', '8.4' ]
+                symfony: [ '6.4.*', '7.0.*', '7.1.*', '7.2.*' ]
                 exclude:
                   - php: '8.1'
                     symfony: '7.0.*'
+                  - php: '8.1'
+                    symfony: '7.2.*'
 
         steps:
             - uses: actions/checkout@master
